# el10_rebuild

./: .gitignore  CLAUDE.md  README.md
reports/: gap-analysis.json  gap-analysis.md
scripts/: check_gem_deps.py
scripts/el10-gap-analysis/: Cargo.toml
scripts/el10-gap-analysis/src/: main.rs
scripts/el10-gap-analysis/src/analysis/: mod.rs  resolver.rs  runtime.rs  version.rs
scripts/el10-gap-analysis/src/repo/: mod.rs  repodata.rs  types.rs
scripts/el10-gap-analysis/src/report/: manifest.rs  markdown.rs  mod.rs  types.rs
scripts/el10-gap-analysis/src/spec/: macros.rs  mod.rs  parser.rs  types.rs
