[package]
name = "el10-gap-analysis"
version = "0.1.0"
edition = "2021"
description = "EL10 package manifest and dependency gap analysis for Foreman/Katello/Pulp"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
indicatif = "0.17"
quick-xml = "0.37"
rayon = "1.10"
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
